2010-04-27  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c, ext/oci8/object.c, ext/oci8/oci8.h,
	  ext/oci8/stmt.c: refactor code to prepare character length
	    semantics support.

2010-04-27  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/encoding.c: add new methods OCI8.nls_ratio
	    and OCI8.nls_ratio=. Comments for rdoc are added and
	    revised for OCI8#charset_name2id, OCI8#charset_name2id=,
	    OCI8.encoding and OCI8.encoding=.
	* lib/oci8.rb.in, lib/oci8/encoding-init.rb: set
	    OCI8.nls_ratio on initialization.

2010-04-23  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oranumber_util.c, test/test_oranumber.rb:
	    add limitted support for OraNumber's positive and negative
	    infinity. They are converted to '~' and '-~' respectively
	    as described in <URL:http://www.ixora.com.au/notes/infinity.htm>.

2010-04-23  KUBO Takehiro  <kubo@jiubao.org>
	* Makefile: fix wrong dependencies in Makefile when running
	    'make -jNNN (where NNN >= 2)'
	    (contributed by Alyano Alyanos. See bug #28129 on rubyforge.)

2010-03-07  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocinumber.c: fix to compile on HP-UX.
	    Duplicate const qualifiers prevented HP-UX cc from compiling.
	    (reported by Sebastian YEPES)

2010-02-28  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 2.0.3 and 2.0.4.
	* VERSION: change the version to 2.0.4.
	* ext/oci8/stmt.c: fix segmentation fault when OCI8::Cursor#fetch
	    is called prior to OCI8::Cursor#exec.
	* ext/oci8/oci8.c: minor fix in rdoc comment.

2010-02-27  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/datetime.rb: fix a problem that fractional seconds are lost
	    when Time value is bound to TIMESTAMP.
	    (reported by Raimonds Simanovskis)

2010-02-27  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/error.c, ext/oci8/extconf.rb, ext/oci8/oci8.h: fix for
	    old Oracle versions, which lack declarations of OCIMsg, oraub8,
	    orasb8 and OCI_DURATION_PROCESS.